Bookmarks: revert ICU plural syntax for "Should we open all these bookmarks?" messsage

Basically a partial revert of r397608

R=thestig@chromium.org
BUG=619392

Review-Url: https://codereview.chromium.org/2098083002
Cr-Commit-Position: refs/heads/master@{#402037}

Former-commit-id: 331ef7f54ea666407a123e92df2e39b97039bbb2